# CausalTrace

./: 01_factual_recall_trace.py  README (3).md  README.md  core  logit_lens.py  model_wrapper.py  plots.py  pyproject.toml
causaltrace/core/: causal_scrubbing.py  patching.py
causaltrace/viz/: __init__.py
tests/: requirements.txt
web/: app.py
