[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "causaltrace"
version = "0.1.0"
description = "Mechanistic interpretability toolkit for transformer language models"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
keywords = ["interpretability", "mechanistic", "transformers", "LLM", "causal-tracing"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "torch>=2.0.0",
    "transformers>=4.38.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "tqdm>=4.65.0",
    "einops>=0.7.0",
]

[project.optional-dependencies]
ui = ["streamlit>=1.32.0"]
dev = ["pytest>=7.0", "black", "ruff", "mypy"]

[tool.black]
line-length = 88
target-version = ["py39"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]
